--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito:400,600|Righteous" rel="stylesheet">
 	<link rel="icon" type="image/png" href="inc/img/favicon.png">
 	<title>NASSCO - 20th To The 21st Century</title>
-	<link type="text/css" rel="stylesheet" href="style.css?v=1.1.0">	
+	<link type="text/css" rel="stylesheet" href="style.css?v=1.1.1">	
 	<script type="text/javascript" src="inc/js/modernizr-custom.js"></script>	
 </head>
 
@@ -219,7 +219,7 @@
 
 			<div class="container-fluid">
 				<div class="row half-height">
-					<div class="col-12 col-md-8">					
+					<div class="col-12 col-md-8 col-lg-10">					
 						<div class="content-wrap bg-color-md" data-stellar-ratio="1.1">
 							<div class="fade-wrap">
 								<h3>1960s</h3>
@@ -723,7 +723,7 @@
 	<script src="inc/js/bootstrap.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<script src="inc/js/scripts.js?v=1.0.9"></script>
-	<script type="text/javascript" src="inc/js/nassco.js?v=1.1.0"></script>
+	<script type="text/javascript" src="inc/js/nassco.js?v=1.1.1"></script>
 	
 </body>
 </html>
