Large screen adjustments

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito:400,600|Righteous" rel="stylesheet">
 	<link rel="icon" type="image/png" href="inc/img/favicon.png">
 	<title>NASSCO - 20th To The 21st Century</title>
-	<link type="text/css" rel="stylesheet" href="style.css?v=1.1.1">	
+	<link type="text/css" rel="stylesheet" href="style.css?v=1.1.2">	
 	<script type="text/javascript" src="inc/js/modernizr-custom.js"></script>	
 </head>
 
@@ -317,7 +317,7 @@
 					</div>
 
 					<div class="col-12 col-sm-4">					
-						<div class="content-wrap bg-color-md two-column light-bg" data-stellar-ratio="1.1">
+						<div class="content-wrap bg-color-md two-column" data-stellar-ratio="1.1">
 							<div class="fade-wrap">
 								<div class="container no-pad">
 									<div class="row">
