--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Nunito:400,600|Righteous" rel="stylesheet">
 	<link rel="icon" type="image/png" href="assets/img/favicon.png">
 	<title>NASSCO - 20th To The 21st Century</title>
-	<link type="text/css" rel="stylesheet" href="assets/css/nassco.css?v=1.0.0">	
+	<link type="text/css" rel="stylesheet" href="assets/css/nassco.css?v=1.0.1">	
 	<script type="text/javascript" src="assets/js/modernizr-custom.js"></script>	
 </head>
 
@@ -104,7 +104,7 @@
 		<section id="timeline-1930" class="slide lazy-nofade" data-src="bg-1930.jpg" data-section="2">
 			
 			<div class="content-padding" id="content-1930">
-				<div class="container-fluid horz-sm-200 horz-xl-150">
+				<div class="container-fluid horz-sm-250 horz-xl-150">
 					<div class="row half-height pb-0">
 						<div id="anchor-1930" class="col-12 col-sm-6 offset-sm-5 col-md-5 offset-md-7 col-lg-6 offset-lg-6">
 							<div class="content-wrap bg-color-md light-text" data-stellar-ratio="1.1">
@@ -147,9 +147,9 @@
 		<section id="timeline-1940" class="slide lazy-nofade mobile-400" data-src="bg-1940.jpg" data-section="3">
 			
 			<div class="content-padding" id="content-1940">
-				<div class="container-fluid horz-sm-110 horz-md-70">
+				<div class="container-fluid horz-sm-110 horz-md-100 horz-xl-70">
 					<div class="row half-height">
-						<div id="anchor-1940" class="col-12 col-sm-10 col-xl-11">					
+						<div id="anchor-1940" class="col-12 col-xl-10">					
 							<div class="content-wrap bg-color-md" data-stellar-ratio="1.1">
 								<div class="fade-wrap">
 									<h3>1940s</h3>
@@ -214,7 +214,7 @@
 		<section id="timeline-1960" class="slide lazy-nofade mobile-400" data-src="bg-1960.jpg" data-section="5">
 			
 			<div class="content-padding" id="content-1960">
-				<div class="container-fluid horz-sm-150 horz-lg-70 ">
+				<div class="container-fluid horz-sm-150 horz-md-100 horz-xl-90">
 					<div class="row half-height">
 						<div id="anchor-1960" class="col-12 col-md-8 col-lg-10">					
 							<div class="content-wrap bg-color-md" data-stellar-ratio="1.1">
@@ -366,7 +366,7 @@
 			
 			<div class="content-padding" id="content-1990">
 				
-				<div class="container-fluid horz-sm-300 horz-lg-150">
+				<div class="container-fluid horz-sm-300 horz-md-200 horz-xl-150">
 
 					<div class="row half-height">
 						<div id="anchor-1990" class="col-12 col-sm-4">		
@@ -510,7 +510,7 @@
 			
 			<div class="content-padding" id="content-2010">
 				
-				<div class="container-fluid horz-sm-150 horz-lg-100">
+				<div class="container-fluid horz-sm-150 horz-xl-100">
 					<div class="row half-height">				
 						<div id="anchor-2010" class="col-12 col-sm-6">		
 							<div class="content-wrap bg-color-md" data-stellar-ratio="1.1">
@@ -760,7 +760,7 @@
 			<li class="nav-item"><a href="#timeline-1990">1990</a></li>
 			<li class="nav-item"><a href="#timeline-2000">2000</a></li>
 			<li class="nav-item"><a href="#timeline-2010">2010</a></li>
-			<li class="nav-item"><a href="#timeline-2020">2020</a></li>
+			<li class="nav-item"><a href="#timeline-final">2020</a></li>
 		</ul>
 	</div>
 </nav>
